fix: fix forgot-pass's  z-index

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -259,6 +259,7 @@ header {
   color: #3d3d3d;
   font-weight: 500;
   font-size: 14px;
+  z-index: 99;
 }
 
 section {
